<resources>
    <string name="app_name">MyFirstApplication</string>

    <string name="hint_tv_family_name">请输入您的姓氏：</string>
    <string name="hint_tv_name">请输入您的名字</string>
    <string name="hint_tv_birth_place">您的出生地：</string>
    <string name="hint_et_family_name">姓</string>
    <string name="hint_et_name">名</string>
    <string name="hint_birth_date">请输入您的出生日期：</string>
    <string name="hint_marker_name_input">请输入标记名称</string>
    <string name="hint_marker_name">标记名称</string>
    <string name="hint_marker_position">标记位置</string>

    <string name="btn_submit">提交</string>
    <string name="btn_close">关闭</string>
    <string name="btn_add_phone">添加电话</string>
    <string name="btn_reset">重置</string>
    <string name="btn_delete">删除</string>
    <string name="btn_back">返回</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_dial_phone">拨打电话</string>
    <string name="btn_click_me">点击我！</string>
    <string name="btn_open_wikipedia">打开维基百科</string>
    <string name="btn_share_birth_city">分享出生城市</string>
    <string name="btn_display">展示</string>
    <string name="btn_next">下一步</string>
    <string name="btn_add_image">添加图片</string>

    <string name="title_phone_number">电话号码</string>
    <string name="title_birth_place">出生地</string>
    <string name="title_first_name">姓名</string>
    <string name="title_family_name">姓</string>
    <string name="title_my_birth_city">我的出生城市是：</string>
    <string name="title_birth_date">出生日期</string>

    <string name="error_no_date_selected">未选择日期</string>
    <string name="error_no_user_data">没有可用联系人信息</string>
    <string name="error_no_share_app">未找到可用于分享您的信息的应用程序。</string>
    <string name="error_no_browser_message">系统没有可用浏览器</string>
    <string name="error_no_camera">没有可用的相机</string>
    <string name="error_image_load_failed">图片加载失败</string>

    <string name="msg_share_via">分享通过</string>
    <string name="msg_raise_a_question">请提出一个问题：</string>
    <string name="msg_input_answer">请输入答案：</string>
    <string name="msg_select_date">选择日期</string>
    <string name="msg_show">显示</string>
    <string name="msg_marker_image">请为标记添加图片</string>
    <string name="msg_choose_image_source">选择图片来源</string>

    <string name="map_type_normal">普通</string>
    <string name="map_type_hybrid">混合</string>
    <string name="map_type_satellite">卫星</string>

    <string name="word_latitude">纬度</string>
    <string name="word_longitude">经度</string>
    <string name="word_camera">相机</string>
    <string name="word_gallery">相册</string>
</resources>