<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/input_linear_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_family_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_tv_family_name"
            android:visibility="visible" />

        <EditText
            android:autofillHints="familyName"
            android:id="@+id/et_family_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_et_family_name" />

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_tv_name"
            android:visibility="visible" />

        <EditText
            android:autofillHints="givenName"
            android:id="@+id/et_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_et_name" />

        <TextView
            android:id="@+id/tv_birth_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_tv_birth_place"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/select_birth_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/birth_place" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_phone"
        android:id="@+id/add_phone_button"
        app:layout_constraintTop_toBottomOf="@id/input_linear_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        app:layout_constraintTop_toBottomOf="@id/add_phone_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>