<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/marker_input_page"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/marker_name_input"
                android:hint="@string/hint_marker_name_input"
                android:ems="10"
                android:inputType="text"
                android:gravity="center"/>

            <ImageView
                android:contentDescription="@string/msg_marker_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="16dp"
                android:background="#DDDDDD"
                android:id="@+id/image_view_marker"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_image"
                android:layout_marginTop="8dp"
                android:id="@+id/btn_add_image"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:layout_marginTop="16dp"
                android:id="@+id/btn_submit"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>